вертикална линија прва проширена матрица

--- a/белешки.tex
+++ b/белешки.tex
@@ -78,9 +78,9 @@
 	Дополнително може да се претстави како \textbf{проширена матрица}:
 	\begin{align}
 		\begin{bmatrix*}[r]
-			1 & -2 & 1 & 0\\
-			0 & 2 & -8 & -8\\
-			5 & 0 & -5 & -5
+			1 & -2 & 1 & \vline & 0\\
+			0 & 2 & -8 & \vline & -8\\
+			5 & 0 & -5 & \vline & -5
 		\end{bmatrix*}
 	\end{align}
 
